fix bug for code block too big

--- a/css/partial/index.css
+++ b/css/partial/index.css
@@ -1,7 +1,6 @@
 .main-container {
-  max-width: 620px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .post-list {
   width: 100%;
