--- a/css/partial/post.css
+++ b/css/partial/post.css
@@ -1,7 +1,8 @@
 .post-details {
   width: 100%;
-  margin: 0 10px;
+  margin: 0 10px 0 10px;
   max-width: 620px;
+  inline-height: 1.8em;
 }
 .post-details a:not(.nonstyle) {
   text-decoration: none;
