--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,19 @@ a {
   text-decoration: none;
   color: #222;
 }
+pre code {
+  white-space: pre;
+  word-wrap: normal;
+  font-size: 14px;
+}
 .body-container {
   margin: 0 auto;
   max-width: 620px;
-  width: 100%;
   display: flex;
   flex-direction: column;
 }
 .body-container > div:not(:last-child) {
   margin-bottom: 20px;
-}
-.main-wrapper {
-  max-width: 620px;
-  display: flex;
-  justify-content: flex-start;
 }
 .header-container {
   margin: 20px 10px;
@@ -44,9 +43,8 @@ a {
   align-items: baseline;
 }
 .main-container {
-  max-width: 620px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .post-list {
   width: 100%;
@@ -86,8 +84,9 @@ a {
 }
 .post-details {
   width: 100%;
-  margin: 0 10px;
+  margin: 0 10px 0 10px;
   max-width: 620px;
+  inline-height: 1.8em;
 }
 .post-details a:not(.nonstyle) {
   text-decoration: none;
